# Engram

./: .gitignore  MEMWEAVE_SPEC.md  README.md  demo.py  pyproject.toml
.github/workflows/: ci.yml
benchmarks/latency/: run.py
benchmarks/longmemeval/: run.py  score.py
benchmarks/longmemeval/adapters/: __init__.py  base.py  engram.py  naive_rag.py  vector_only.py
benchmarks/longmemeval/data/: sample_20.json  sample_stress.json
benchmarks/longmemeval/results/: longmemeval_20260617_202823.json  longmemeval_20260617_202823.md  longmemeval_20260617_212925.json  longmemeval_20260617_212925.md  longmemeval_20260617_224204.json  longmemeval_20260617_224204.md  longmemeval_20260617_230205.json  longmemeval_20260617_230205.md  longmemeval_20260617_232103.json  longmemeval_20260617_232103.md  longmemeval_20260617_232701.json  longmemeval_20260617_232701.md  longmemeval_20260617_234157.json  longmemeval_20260617_234157.md  longmemeval_20260617_235833.json  longmemeval_20260617_235833.md  longmemeval_20260618_000851.json  longmemeval_20260618_000851.md  longmemeval_20260618_005515.json  longmemeval_20260618_005515.md  longmemeval_20260618_010523.json  longmemeval_20260618_010523.md  longmemeval_20260618_012019.json  longmemeval_20260618_012019.md
docs/: benchmarks.md  latency_results.json
examples/: colab_demo.ipynb
src/engram/: __init__.py  async_client.py  client.py  config.py  models.py
src/engram/consolidation/: engine.py
src/engram/embeddings/: base.py  ollama_embedder.py  st_embedder.py
src/engram/extraction/: base.py  llm_extractor.py  prompts.py
src/engram/retrieval/: hybrid.py
src/engram/stores/graph/: base.py  neo4j_store.py  networkx_store.py
src/engram/stores/vector/: base.py  faiss_store.py  sqlite_store.py
tests/: conftest.py
tests/unit/: test_async_client.py  test_consolidation.py  test_extraction.py  test_faiss_store.py  test_hybrid.py  test_models.py  test_neo4j_store.py  test_networkx_store.py  test_sqlite_store.py
