[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "engram"
version = "0.1.0"
description = "Long-term memory engine for LLM assistants — hybrid vector + knowledge graph"
requires-python = ">=3.9"
dependencies = ["pydantic>=2.0", "numpy", "networkx", "tenacity"]

[project.optional-dependencies]
local = ["ollama"]
anthropic = ["anthropic"]
dev = ["pytest>=7", "pytest-cov", "ruff"]
all = ["engram[local,anthropic,dev]"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
